--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: Hamees
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -21,7 +21,7 @@ description:
   Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
   Wikilink support, backlinks, local graph, tags, and link previews.
 page_title:
-  "🪴 Quartz 3.3"
+  "侍 DevSensei"
 links:
   - link_name: Twitter
     link: https://twitter.com/_jzhao
